feat(admin): adição de página admin e segurança com middleware.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import ChristmasLights from "../ui/ChristmasLights.astro";
-import Menu from "../ui/Menu.astro";
+import ChristmasLights from "../ui/header/ChristmasLights.astro";
+import Menu from "../ui/header/Menu.astro";
 import SwitchLang from "../ui/SwitchLang.astro";
 import SwitchTheme from "../ui/SwitchTheme.astro";
 import cn from "../utils";
