--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,5 +1,5 @@
 ---
-import Project from "../ui/Project.astro";
+import Project from "../ui/projects/Project.astro";
 
 const { class: className } = Astro.props;
 ---
