--- a/src/ui/SwitchLang.astro
+++ b/src/ui/SwitchLang.astro
@@ -23,7 +23,7 @@ const {
   class: className = "",
   title = "Change language",
   "aria-label": ariaLabel = title,
-} = Astro.props;
+}: Props = Astro.props;
 
 const btnBaseClass =
   "relative hidden md:block min-w-8 min-h-8 size-8 p-0.5 text-1xl font-cascadia-code font-bold cursor-pointer";
