--- a/src/ui/header/ChristmasLights.astro
+++ b/src/ui/header/ChristmasLights.astro
@@ -1,5 +1,5 @@
 ---
-import cn from "../utils";
+import cn from "../../utils";
 
 const lights = Array.from({ length: 20 });
 const delays = lights.map(() => (Math.random() * 2).toFixed(2));
