--- a/src/ui/hero-section/HeroBadge.astro
+++ b/src/ui/hero-section/HeroBadge.astro
@@ -9,7 +9,7 @@ const { class: className } = Astro.props as Props;
 ---
 
 <div
-  class={`${className} flex flex-col sm:flex-row text-nowrap justify-center items-center gap-4`}
+  class={`${className} flex flex-col sm:flex-row text-nowrap justify-center items-stretch gap-4`}
 >
   <div
     class="flex bg-linear-to-r from-purple-default to-purple-blue justify-center items-center dark:border-none border-2
