--- a/src/ui/projects/Project.astro
+++ b/src/ui/projects/Project.astro
@@ -1,8 +1,8 @@
 ---
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
-import img from "../../public/Logo.png";
-import Technologies from "./Technologies.astro";
+import img from "../../../public/Logo.png";
+import Technologies from "../Technologies.astro";
 
 interface Props extends astroHTML.JSX.HTMLAttributes {
   titleProject?: string;
