--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,19 +1,16 @@
 ---
 import { calculateAge } from "../scripts/about-me";
+import GradientBg from "../ui/GradientBg.astro";
 import cn from "../utils";
 
 const aboutMeClass = cn(
-  `flex relative flex-col w-full h-fit min-h-screen justify-center items-center 
-    gap-4 p-8 font-cascadia-code text-white`,
+  `flex relative flex-col w-full h-fit min-h-screen justify-center items-center gap-4 p-8 
+    font-cascadia-code text-white`,
 );
 ---
 
 <section id="about-me" class={aboutMeClass}>
-  <div
-    class="absolute inset-0 -z-10 bg-linear-to-tr from-indigo-500 via-purple-500 to-blue-500
-  dark:from-indigo-900 dark:via-purple-900 dark:to-blue-900 transition-colors ease-in-out duration-1000"
-  >
-  </div>
+  <GradientBg class="bg-linear-to-tr -z-10" />
   <div class="flex flex-col max-w-8xl h-full justify-center items-center gap-8">
     <h2
       id="about"
@@ -27,7 +24,7 @@ const aboutMeClass = cn(
         >me</span
       >
     </h2>
-    <p class="bg-gray-default text-xl text-justify p-4 rounded-md">
+    <p class="max-w-7xl bg-gray-default text-xl text-justify p-4 rounded-md">
       Hello!! My name is Fábio, I'm {calculateAge("2005-05-30")} years old, and I
       live in Manoel Ribas, Paraná - Brazil. I'm a very curious guy who enjoys learning
       how everything works. That's why I'm passionate about technology, which is a
