--- a/src/components/ContactMe.astro
+++ b/src/components/ContactMe.astro
@@ -1,5 +1,6 @@
 ---
 import { actions } from "astro:actions";
+import p from "../constants/personal";
 import Modal from "../ui/Modal.astro";
 import SocialButton from "../ui/SocialButton.astro";
 import cn from "../utils";
@@ -12,7 +13,7 @@ if (actionResult?.data?.success) showModal = true;
 <section
   id="contact-me"
   class={cn(
-    "flex bg-light flex-col w-full min-h-screen justify-center items-center font-cascadia-code gap-8 px-4 py-12",
+    "flex bg-light flex-col w-full min-h-screen justify-center items-center font-cascadia-code gap-8 px-8 py-12",
   )}
 >
   {
@@ -34,23 +35,26 @@ if (actionResult?.data?.success) showModal = true;
     I'm always open to new opportunities and collaborations. Feel free to
     contact me through any of the channels below.
   </h2>
-  <div class="flex flex-wrap gap-4 md:gap-8 justify-center items-center">
+  <div
+    class="flex flex-wrap w-full gap-4 md:gap-8 justify-center items-center md:*:flex-none *:flex-1"
+  >
     <SocialButton>Whatsapp</SocialButton>
     <SocialButton
-      title="Instagram"
       name="line-md:instagram"
-      href="https://www.instagram.com/fabio.ghizoni_">Instagram</SocialButton
+      title={p.socials.insta}
+      href={p.socials.insta}
     >
+      Instagram
+    </SocialButton>
     <SocialButton
-      title="Github"
       name="line-md:github"
-      href="https://github.com/fabioghizoni-dev">Github</SocialButton
+      title={p.socials.github}
+      href={p.socials.github}>Github</SocialButton
     >
     <SocialButton
-      title="LinkedIn"
       name="line-md:linkedin"
-      href="https://www.linkedin.com/in/f%C3%A1bioghizoni"
-      >LinkedIn</SocialButton
+      title={p.socials.linkedin}
+      href={p.socials.linkedin}>LinkedIn</SocialButton
     >
   </div>
   <form
@@ -68,6 +72,8 @@ if (actionResult?.data?.success) showModal = true;
         id="name"
         name="name"
         type="text"
+        minlength="2"
+        maxlength="100"
         autocomplete="name"
         placeholder="Your name here"
         class="border-2 border-white/30 px-3 md:px-4 py-2 rounded-lg placeholder:text-white/50 bg-black text-white focus:outline-none focus:border-white/70 transition"
@@ -82,6 +88,7 @@ if (actionResult?.data?.success) showModal = true;
         id="email"
         type="email"
         name="email"
+        maxlength="255"
         autocomplete="email"
         placeholder="your.email@example.com"
         class="border-2 border-white/30 px-3 md:px-4 py-2 rounded-lg placeholder:text-white/50 bg-black text-white focus:outline-none focus:border-white/70 transition"
@@ -96,6 +103,8 @@ if (actionResult?.data?.success) showModal = true;
         rows="6"
         id="message"
         name="message"
+        minlength="10"
+        maxlength="2000"
         placeholder="Write your message here..."
         class="border-2 border-white/30 bg-black px-3 md:px-4 py-2 rounded-lg text-white placeholder:text-white/50 focus:outline-none focus:border-white/70 transition resize-none"
       ></textarea>
