--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -1,4 +1,5 @@
 ---
+import p from "../constants/personal";
 import Layout from "../layouts/Layout.astro";
 interface Props {
   error: unknown;
@@ -10,7 +11,7 @@ const description = `Page 500 | Internal server error, please try again later or
   clicking the logo in the upper left corner or the "home" button in the middle of the screen!!`;
 ---
 
-<Layout header footer title="500 | Fábio Ghizoni" description={description}>
+<Layout header footer title=`500 | ${p.name}` description={description}>
   <h1
     class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-white text-3xl font-space-grotesk"
   >
