--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,12 +4,13 @@ import AboutMe from "../components/AboutMe.astro";
 import ContactMe from "../components/ContactMe.astro";
 import HeroSection from "../components/HeroSection.astro";
 import Projects from "../components/Projects.astro";
+import p from "../constants/personal";
 import Layout from "../layouts/Layout.astro";
 import ScrollToTop from "../ui/ScrollToTop.astro";
 import Technologies from "../ui/Technologies.astro";
 ---
 
-<Layout header footer title="Web | Fábio Ghizoni">
+<Layout header footer title=`Web | ${p.name}`>
   <HeroSection />
   <AboutMe />
   <Projects class="hidden" />
