--- a/src/ui/NoiseBg.astro
+++ b/src/ui/NoiseBg.astro
@@ -20,7 +20,7 @@ let {
   seed = "1",
   numOctaves = "1",
   baseFrequency = "0.7",
-} = Astro.props as Props;
+}: Props = Astro.props;
 
 const {
   random,
@@ -31,7 +31,7 @@ const {
   stitchTiles = "stitch",
   ariaLabel = "Filter Noise Gradient",
   style = "mix-blend-mode: soft-light;",
-} = Astro.props as Props;
+}: Props = Astro.props;
 
 if (random) {
   // Between 1 and 9999
